--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "pg": "^8.9.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.8.2"
+    "react-icons": "^4.8.0",
+    "react-router-dom": "^6.8.2",
+    "react-spring": "^9.7.1"
   },
   "devDependencies": {
     "@types/react": "^18.0.27",
