--- a/package.json
+++ b/package.json
@@ -13,9 +13,12 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "fs": "^0.0.1-security",
+    "path": "^0.12.7",
     "pg": "^8.10.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-draggable": "^4.4.5",
     "react-icons": "^4.8.0",
     "react-router-dom": "^6.8.2"
   },
