Changed file uploader in create profile

--- a/package.json
+++ b/package.json
@@ -9,17 +9,18 @@
     "server": "nodemon server/index.js"
   },
   "dependencies": {
-    "@okta/okta-auth-js": "^7.2.0",
-    "@okta/okta-react": "^6.7.0",
-    "@okta/okta-signin-widget": "^7.4.0",
     "@fullcalendar/core": "^6.1.4",
     "@fullcalendar/daygrid": "^6.1.4",
     "@fullcalendar/interaction": "^6.1.4",
     "@fullcalendar/react": "^6.1.4",
     "@fullcalendar/timegrid": "^6.1.4",
+    "@okta/okta-auth-js": "^7.2.0",
+    "@okta/okta-react": "^6.7.0",
+    "@okta/okta-signin-widget": "^7.4.0",
     "axios": "^1.3.4",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
+    "esbuild": "^0.17.11",
     "express": "^4.18.2",
     "fs": "^0.0.1-security",
     "moment": "^2.29.4",
